--- a/ProvaAPI_MySQL/ProvaAPI_MySQL.csproj
+++ b/ProvaAPI_MySQL/ProvaAPI_MySQL.csproj
@@ -25,11 +25,13 @@
     <None Remove="Database\" />
     <None Remove="Model\" />
     <None Remove="Model\Request\" />
+    <None Remove="Entity\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Controllers\" />
     <Folder Include="Database\" />
     <Folder Include="Model\" />
     <Folder Include="Model\Request\" />
+    <Folder Include="Entity\" />
   </ItemGroup>
 </Project>
